# flask-user-api

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  run.py
flask_user_api/: __init__.py  config.py  extensions.py  models.py  schemas.py
flask_user_api/routes/: users.py
migrations/: env.py
migrations/versions/: a1eeeeed22ac_.py  c90a88f8bd05_initial_migration_create_users_table.py
static/: swagger.json
tests/: test_users.py
