[project]
name = "flask_user_api"
version = "0.1.0"
description = ""
authors = [
    {name = "Bondzik-S",email = "bondziks@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-marshmallow (>=1.3.0,<2.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "flask-swagger-ui (>=4.11.1,<5.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "docker (>=7.1.0,<8.0.0)",
    "marshmallow-sqlalchemy (>=1.4.1,<2.0.0)",
    "flask-cors (>=5.0.1,<6.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [
    { include = "flask_user_api" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-flask = "^1.3.0"

